# ACSE-Makefile

./: README.md
.devcontainer/: Dockerfile
.github/workflows/: deploy-code.yml
examples/cmake_hello/: CMakeLists.txt  Makefile
examples/cmake_mpi/: CMakeLists.txt  Makefile  main.cpp
examples/makefile_complex/: Makefile
examples/makefile_complex/include/: animal.h  beetle.h  bug.h
examples/makefile_complex/src/: animal.cpp  beetle.cpp  bug.cpp
examples/makefile_hello/: Makefile  hello_world.cpp
examples/testing_ctest/: CMakeLists.txt  sum_func.cpp
examples/testing_ctest/tests/: test_sum.cpp
exercises/eigen/: README.md  eigen_test.cpp
exercises/libpng_example/: README.md
slides/: cmake.html  cmake.md  hpc.html  hpc.md  make.html  make.md  objectives.html  objectives.md
source/: cmake.rst  conf.py  index.rst  make.rst  slurm.rst  testing.rst
